tests/more_react/more_react.exp
Error -------------------------------------------------------------------------------------------- checkPropTypes.js:7:1

Cannot call `checkPropTypes` because function [1] requires another argument. [incompatible-call]

   checkPropTypes.js:7:1
     7| checkPropTypes({ foo: PropTypes.string }, { foo: 'foo' }); // error: missing arguments
        ^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:221:41
                                                v---
   221|   declare export function checkPropTypes<V>(
   222|     propTypes : any,
   223|     values: V,
   224|     location: string,
   225|     componentName: string,
   226|     getStack: ?(() => ?string)
   227|   ) : void;
          -------^ [1]


Error -------------------------------------------------------------------------------------------- checkPropTypes.js:8:1

Cannot call `checkPropTypes` because function [1] requires another argument. [incompatible-call]

   checkPropTypes.js:8:1
     8| checkPropTypes({ foo: PropTypes.string }, { foo: 'foo' }, 'value'); // error: missing argument
        ^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:221:41
                                                v---
   221|   declare export function checkPropTypes<V>(
   222|     propTypes : any,
   223|     values: V,
   224|     location: string,
   225|     componentName: string,
   226|     getStack: ?(() => ?string)
   227|   ) : void;
          -------^ [1]


Error ------------------------------------------------------------------------------------------ checkPropTypes.js:12:91

Cannot call `checkPropTypes` with function bound to `getStack` because number [1] is incompatible with string [2] in the
return value. [incompatible-call]

   checkPropTypes.js:12:91
    12| checkPropTypes({ foo: PropTypes.string }, { foo: 'foo' }, 'value', 'TestComponent', () => 123); // error: number ~> string
                                                                                                  ^^^ [1]

References:
   <BUILTINS>/react.js:226:24
   226|     getStack: ?(() => ?string)
                               ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ inexact_config.js:12:13

Cannot create `Component2` element because property `bar` is missing in `Props` [1] but exists in props [2].
[prop-missing]

   inexact_config.js:12:13
   12| const _c = <Component2 foo={3} bar={3} />; // error
                   ^^^^^^^^^^

References:
   inexact_config.js:10:29
   10| function Component2(props : Props) : React$Node { return null; }
                                   ^^^^^ [1]
   inexact_config.js:12:12
   12| const _c = <Component2 foo={3} bar={3} />; // error
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ inexact_config.js:12:13

Cannot create `Component2` element because property `foo` is missing in `Props` [1] but exists in props [2].
[prop-missing]

   inexact_config.js:12:13
   12| const _c = <Component2 foo={3} bar={3} />; // error
                   ^^^^^^^^^^

References:
   inexact_config.js:10:29
   10| function Component2(props : Props) : React$Node { return null; }
                                   ^^^^^ [1]
   inexact_config.js:12:12
   12| const _c = <Component2 foo={3} bar={3} />; // error
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ inexact_config.js:13:13

Cannot create `Component2` element because property `children` is missing in `Props` [1] but exists in props [2].
[prop-missing]

   inexact_config.js:13:13
   13| const _d = <Component2>{"foo"}</Component2>; //error
                   ^^^^^^^^^^

References:
   inexact_config.js:10:29
   10| function Component2(props : Props) : React$Node { return null; }
                                   ^^^^^ [1]
   inexact_config.js:13:12
   13| const _d = <Component2>{"foo"}</Component2>; //error
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ inexact_config.js:22:13

Cannot create `Component4` element because property `bar` is missing in object type [1] but exists in props [2].
[prop-missing]

   inexact_config.js:22:13
   22| const _g = <Component4 foo={3} bar={3} />; //error
                   ^^^^^^^^^^

References:
   inexact_config.js:20:29
   20| function Component4(props : {| foo : number |}) : React$Node { return null; }
                                   ^^^^^^^^^^^^^^^^^^ [1]
   inexact_config.js:22:12
   22| const _g = <Component4 foo={3} bar={3} />; //error
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ inexact_config.js:23:13

Cannot create `Component4` element because property `foo` is missing in props [1] but exists in object type [2].
[prop-missing]

   inexact_config.js:23:13
   23| const _h = <Component4></Component4>; //error
                   ^^^^^^^^^^

References:
   inexact_config.js:23:12
   23| const _h = <Component4></Component4>; //error
                  ^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   inexact_config.js:20:29
   20| function Component4(props : {| foo : number |}) : React$Node { return null; }
                                   ^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- inexact_props.js:19:2

Cannot create `B` element because property `z` is missing in `Props2` [1] but exists in props [2]. [prop-missing]

   inexact_props.js:19:2
   19| <B x={4} y={"hello"} z={3}></B>; // error
        ^

References:
   inexact_props.js:16:33
   16| class B extends React$Component<Props2> {}
                                       ^^^^^^ [1]
   inexact_props.js:19:1
   19| <B x={4} y={"hello"} z={3}></B>; // error
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- inexact_props.js:44:34

Cannot create `YComponent` element because null or undefined [1] is incompatible with string [2] in property `p3`.
[incompatible-type]

   inexact_props.js:44:34
   44| <YComponent p1={true} p2={3} p3={s}></YComponent>
                                        ^

References:
   inexact_props.js:42:17
   42| declare var s : ?string;
                       ^^^^^^^ [1]
   inexact_props.js:35:9
   35|   p3? : string,
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- subclassComponent.js:29:2

`D` [1] is incompatible with `React.Component` [2]. [incompatible-type]

   subclassComponent.js:29:2
   29| <D></D>; // error
        ^

References:
   subclassComponent.js:21:15
   21| declare class D extends React$Component2<Props2, void> {}
                     ^ [1]
   <BUILTINS>/react.js:44:15
   44| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- subclassComponent.js:30:2

`E` [1] is incompatible with `React.Component` [2]. [incompatible-type]

   subclassComponent.js:30:2
   30| <E></E>; // error
        ^

References:
   subclassComponent.js:23:15
   23| declare class E extends D {}
                     ^ [1]
   <BUILTINS>/react.js:44:15
   44| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- subclassComponent.js:31:2

`F` [1] is incompatible with `React.Component` [2]. [incompatible-type]

   subclassComponent.js:31:2
   31| <F></F>; // error
        ^

References:
   subclassComponent.js:25:15
   25| declare class F {
                     ^ [1]
   <BUILTINS>/react.js:44:15
   44| declare class React$Component<Props, State = void> {
                     ^^^^^^^^^^^^^^^ [2]



Found 13 errors
